adlatus-ci-cd/cd/deploy/base/modules/adlatus-gui/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: adlatus-gui-service
  namespace: adl
spec:
  selector:
    app: adlatus-gui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
